--- a/conf/distro/openstlinux-weston.conf
+++ b/conf/distro/openstlinux-weston.conf
@@ -20,3 +20,6 @@ DISTRO_FEATURES:remove = " x11 "
 #PREFERRED_PROVIDER_virtual/xserver = "${@bb.utils.contains('DISTRO_FEATURES', 'x11 wayland', 'xwayland', 'xserver-xorg', d)}"
 
 DISTRO_FEATURES:append = " gplv3 "
+
+# activate GPU Vulkan & opencl
+DISTRO_FEATURES:append = " ${@bb.utils.filter('MACHINE_FEATURES', 'vulkan opencl', d)} "
