--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -20,7 +20,15 @@ BBFILE_COLLECTIONS += "st-openstlinux"
 BBFILE_PATTERN_st-openstlinux := "^${LAYERDIR}/"
 BBFILE_PRIORITY_st-openstlinux = "5"
 
-LAYERDEPENDS_st-openstlinux = "qt5-layer"
+LAYERDEPENDS_st-openstlinux = " "
+# dependency with meta-networking for netperf, ntp
+LAYERDEPENDS_st-openstlinux += " networking-layer "
+# dependency with meta-webserver for netdata
+LAYERDEPENDS_st-openstlinux += " webserver "
+# dependency with meta-gnome for stsprof
+LAYERDEPENDS_st-openstlinux += " gnome-layer "
+# dependency with meta-multimedia for gstreamer dependency (faac)
+LAYERDEPENDS_st-openstlinux += " multimedia-layer"
 
 # Set a variable to get the openstlinux location
 OPENSTLINUX_BASE = "${LAYERDIR}"
