PSPLASH: add new splashscreen
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@foss.st.com>

--- a/recipes-core/psplash/psplash-drm/psplash-drm-start.service
+++ b/recipes-core/psplash/psplash-drm/psplash-drm-start.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Starts Psplash Boot screen
-#Wants=systemd-remount-fs.service
-#After=systemd-vconsole-setup.service systemd-udev-trigger.service systemd-udevd.service
-After=systemd-remount-fs.service
+Wants=dev-dri-card0.device
+After=dev-dri-card0.device
+After=systemd-udevd.service
 DefaultDependencies=no
 
 [Service]
@@ -10,7 +10,7 @@ Type=simple
 RemainAfterExit=yes
 KillMode=mixed
 SendSIGKILL=no
-ExecStart=/usr/bin/psplash-drm -w
+ExecStart=/usr/bin/psplash-drm-start.sh
 
 [Install]
 WantedBy=local-fs.target
