WESTON-INIT: adaption
- add pipewire support
- hdmi audio switch to pipepwire

Signed-off-by: Christophe Priouzeau <christophe.priouzeau@foss.st.com>

--- a/recipes-graphics/wayland/weston-init/weston.ini
+++ b/recipes-graphics/wayland/weston-init/weston.ini
@@ -12,11 +12,11 @@ require-input=false
 keymap_layout=us
 
 [shell]
-background-image=/usr/share/weston/backgrounds/OpenSTLinux_background_1024x600.png
+background-image=/usr/share/weston/backgrounds/##DEFAULT_BACKGROUND##
 background-color=0xff002244
 background-type=scale-crop
 clock-format=minutes
-panel-color=0x90a1a1a1
+panel-color=0xffffd200
 panel-position=bottom
 locking=false
 animation=none
@@ -46,7 +46,7 @@ path=/bin/true
 
 [launcher]
 icon=/usr/share/weston/icon/ST13345_Products_light_blue_24x24.png
-path=/usr/local/demo/demo_launcher.py
+path=/usr/local/weston-start-at-startup/start_up_demo_launcher.sh
 
 [launcher]
 icon=/usr/share/weston/icon/space.png
@@ -60,7 +60,8 @@ path=/usr/libexec/weston-keyboard
 # Use the command "systemctl restart weston@root" after pluging/unpluging the hdmi cable.
 [output]
 name=HDMI-A-1
-mode=1280x720
+#mode=1280x720
+mode=##HDMI_MODE##
 
 # DSI connector
 [output]
