DEMO application: split application and launcher
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@foss.st.com>

--- a/recipes-samples/demo-application/demo-application-3d-cube/116-3d_cube_camera_shader.yaml
+++ b/recipes-samples/demo-application/demo-application-3d-cube/116-3d_cube_camera_shader.yaml
@@ -3,7 +3,7 @@ Application:
     Description: GPU &amp; shader
     Icon: application/3d-cube-extra/pictures/ST153_cube_purple.png
     Board:
-        List: stm32mp157
+        List: stm32mp157 stm32mp257
     Type: script
     Script:
         Exist:
