--- a/recipes-samples/demo-application/demo-application-camera/010-camera_mp25.yaml
+++ b/recipes-samples/demo-application/demo-application-camera/010-camera_mp25.yaml
@@ -3,13 +3,13 @@ Application:
     Description: preview
     Icon: application/camera/pictures/ST1077_webcam_dark_blue.png
     Board:
-        List: all
+        List: stm32mp25
     Type: script
     Script:
         Exist:
-            Command: /usr/local/demo/application/camera/bin/check_camera_preview.sh
+            Command: /usr/local/demo/application/camera/bin/check_camera_preview_mp25.sh
             Msg_false: Webcam or camera is not connected
-        Start: application/camera/bin/launch_camera_preview.sh
+        Start: application/camera/bin/launch_camera_preview_mp25.sh
     Action:
         button_release_event: script_management
         button_press_event: highlight_eventBox
