--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -36,8 +36,8 @@ OPENSTLINUX_BASE = "${LAYERDIR}"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_st-openstlinux = "1"
-LAYERSERIES_COMPAT_st-openstlinux = "mickledore"
+LAYERSERIES_COMPAT_st-openstlinux = "scarthgap"
 
 INHERIT += "check-st-openstlinux-compatibility"
 # OpenSTLinux compatibility version
-ST_OSTL_COMPATIBILITY_VERSION_st-openstlinux = "5.1"
+ST_OSTL_COMPATIBILITY_VERSION_st-openstlinux = "6.0"
