DISTRO: bump to scarthgap
Change-Id: Ic61f4dee5767108c2c585a731208d36dcdcba282
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@foss.st.com>

--- a/conf/templates/default/local.conf.sample
+++ b/conf/templates/default/local.conf.sample
@@ -309,6 +309,9 @@ SDK_INCLUDE_TOOLCHAIN="1"
 # Enable PR server to avoid version-going-backward issue
 PRSERV_HOST = "localhost:0"
 
+# for archiver
+HOSTTOOLS += "xz truncate"
+
 # =========================================================================
 # Configure STM32MP default version to github
 # =========================================================================
