--- a/recipes-graphics/wayland/weston-init/weston.ini
+++ b/recipes-graphics/wayland/weston-init/weston.ini
@@ -1,15 +1,13 @@
 [core]
-#modules=cms-colord.so
+modules=screen-share.so
 #xwayland=true
-shell=desktop-shell.so
+shell=desktop
 #gbm-format=xrgb2101010
-backend=drm-backend.so
+backend=drm
 idle-time=0
 repaint-window=100
 require-input=false
-
-[keyboard]
-keymap_layout=us
+remoting=remoting-plugin.so
 
 [shell]
 background-image=/usr/share/weston/backgrounds/##DEFAULT_BACKGROUND##
@@ -24,13 +22,13 @@ startup-animation=none
 close-animation=none
 focus-animation=none
 binding-modifier=ctrl
-#num-workspaces=6
 #cursor-theme=whiteglass
 #cursor-size=24
 
 [launcher]
 icon=/usr/share/weston/icon/utilities-terminal.png
 path=/usr/bin/weston-terminal
+displayname=Terminal
 
 [launcher]
 icon=/usr/share/weston/icon/space.png
@@ -39,6 +37,7 @@ path=/bin/true
 [launcher]
 icon=/usr/share/weston/icon_flower.png
 path=/usr/bin/weston-flower
+displayname=Weston Flower
 
 [launcher]
 icon=/usr/share/weston/icon/space.png
@@ -47,6 +46,7 @@ path=/bin/true
 [launcher]
 icon=/usr/share/weston/icon/ST13345_Products_light_blue_24x24.png
 path=/usr/local/weston-start-at-startup/start_up_demo_launcher.sh
+displayname=Launcher
 
 [launcher]
 icon=/usr/share/weston/icon/space.png
@@ -54,6 +54,9 @@ path=/bin/true
 
 [input-method]
 path=/usr/libexec/weston-keyboard
+
+[keyboard]
+keymap_layout=us
 
 # HDMI connector
 # If the hdmi cable is plugged, weston uses the hdmi output (else dsi output).
@@ -73,6 +76,11 @@ app-ids=1000
 # LTDC connector
 [output]
 name=DPI-1
+mode=preferred
+
+# LVDS connector
+[output]
+name=LVDS-1
 mode=preferred
 
 [libinput]
@@ -99,7 +107,7 @@ calibration_helper=/bin/echo
 #max_accel_factor = 1.0
 
 [screen-share]
-command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize
+command=/usr/bin/weston --backend=rdp --shell=fullscreen --no-clients-resize
 #start-on-startup=false
 
 #[xwayland]
