--- a/recipes-samples/demo-application/demo-application-3d-cube/040-3d_cube.yaml
+++ b/recipes-samples/demo-application/demo-application-3d-cube/040-3d_cube.yaml
@@ -3,7 +3,7 @@ Application:
     Description: GPU
     Icon: application/3d-cube/pictures/ST153_cube_purple.png
     Board:
-        List: stm32mp157 stm32mp257
+        List: stm32mp157 stm32mp257 stm32mp235
     Type: script
     Script:
         Exist:
